--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,15 @@
 default:
   course_title: "Reproducible Research Data and Project Management in R"
-  hackpad_url: "http://bit.ly/acce21-notepad"
+  hackpad_url: "http://bit.ly/acce24-hackpad"
   course_instructor: "Dr Anna Krystalli"
   github_repo: "r-rse/rrresearch-acce-rrse"
-  escaped_url: "https://annakrystalli.me/rrresearchACCE20"
+  escaped_url: "https://acce-rrresearch.netlify.app/"
   course_dates: "April 2024"
   location: "Online"
-  book_url: "https://annakrystalli.me/rrresearchACCE20/"
-  bitly_url: "http://bit.ly/ACCE-book"
+  book_url: "https://acce-rrresearch.netlify.app/"
+  bitly_url: "http://bit.ly/rrresearch"
   output_dir: "_book"
-  pkgdev_date_iso: "2021-05-07"
+  pkgdev_date_iso: "2024-04-19"
   day1: "April 12th"
   day2: "April 15th"
   day3: "April 17th"
