--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,6 +25,7 @@ project:
     - 06a_quarto-intro.qmd
     - 06b_create-report.qmd
     - 06c_code-chunks.qmd
+    - 07a_git.qmd
     - 07b_evolottery.qmd
     - 08a_pkg_functions.qmd
     - 10_closing-slides.qmd
@@ -111,6 +112,7 @@ website:
           - 06c_code-chunks.qmd
       - section: "VERSION CONTROL"
         contents:
+          - 07a_git.qmd
           - 07b_evolottery.qmd
       - section: "PACKAGING CODE"
         contents:
